--- a/www.parliament.gh/1286d335e792408e847a7886daa43fc15a6d7318.yml
+++ b/www.parliament.gh/1286d335e792408e847a7886daa43fc15a6d7318.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 15 Nov 2016 14:41:03 GMT
+    - Tue, 15 Nov 2016 14:41:36 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22aebb55f080ca0131cab90d025edd59ce%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479220863%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D76069eb3d5eb3e5c2ffc161c979ad6f0;
-      expires=Tue, 15-Nov-2016 16:41:03 GMT; path=/
-    - csrf_xmen=96e64fd83e32c6dc67a1ee94feff0c95; expires=Tue, 15-Nov-2016 16:41:03
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22eab66198d0ca099cc1f9cfc445627aac%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479220896%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D3203cf4373fc7d6c2db4cbdab2468ddd;
+      expires=Tue, 15-Nov-2016 16:41:36 GMT; path=/
+    - csrf_xmen=85e386fb149943b4f8daadc9439fbda9; expires=Tue, 15-Nov-2016 16:41:36
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
+    Content-Length:
+    - '16673'
     Content-Type:
     - text/html; charset=iso-8859-1
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 15 Nov 2016 14:41:03 GMT
+recorded_at: Tue, 15 Nov 2016 14:41:36 GMT
