--- a/www.parliament.gh/d0ea8273a74ada4c1f8a2f7b7ff96471aeafc0d2.yml
+++ b/www.parliament.gh/d0ea8273a74ada4c1f8a2f7b7ff96471aeafc0d2.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 15 Nov 2016 14:40:21 GMT
+    - Thu, 17 Nov 2016 10:05:02 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2239acda91834699d873b7eea28f75e561%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479220821%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D071b3216359cf410a9e1e3923e28f94c;
-      expires=Tue, 15-Nov-2016 16:40:21 GMT; path=/
-    - csrf_xmen=f80f441323daa2b5a830e064e881f0eb; expires=Tue, 15-Nov-2016 16:40:21
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22fd660a550dd1f7968d97b140b555c2f0%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377102%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D327fc44ca5bb8d5a5f271b9bd50ddfef;
+      expires=Thu, 17-Nov-2016 12:05:02 GMT; path=/
+    - csrf_xmen=d0cb61ff47bb1c72dd056fb9e5d926ca; expires=Thu, 17-Nov-2016 12:05:02
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
+    Content-Length:
+    - '16514'
     Content-Type:
     - text/html; charset=iso-8859-1
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 15 Nov 2016 14:40:21 GMT
+recorded_at: Thu, 17 Nov 2016 10:05:02 GMT
