--- a/www.parliament.gh/1286d335e792408e847a7886daa43fc15a6d7318.yml
+++ b/www.parliament.gh/1286d335e792408e847a7886daa43fc15a6d7318.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 15 Nov 2016 14:41:36 GMT
+    - Thu, 17 Nov 2016 10:08:22 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22eab66198d0ca099cc1f9cfc445627aac%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479220896%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D3203cf4373fc7d6c2db4cbdab2468ddd;
-      expires=Tue, 15-Nov-2016 16:41:36 GMT; path=/
-    - csrf_xmen=85e386fb149943b4f8daadc9439fbda9; expires=Tue, 15-Nov-2016 16:41:36
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22264b3d20c8ae1b2fef66237a70a607e5%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377302%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df74626024b89ca6e3bc6cf86f0cb2bf1;
+      expires=Thu, 17-Nov-2016 12:08:22 GMT; path=/
+    - csrf_xmen=2a412823677a36b8409454c1a1c1833d; expires=Thu, 17-Nov-2016 12:08:22
       GMT; path=/
     X-Server:
     - '3908'
-    Content-Length:
-    - '16673'
+    Transfer-Encoding:
+    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 15 Nov 2016 14:41:36 GMT
+recorded_at: Thu, 17 Nov 2016 10:08:22 GMT
