--- a/www.parliament.gh/be632ccafcae8f7a4f0c34f6e3dc09b54337fba2.yml
+++ b/www.parliament.gh/be632ccafcae8f7a4f0c34f6e3dc09b54337fba2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 15 Nov 2016 14:41:17 GMT
+    - Thu, 17 Nov 2016 10:09:33 GMT
     Server:
     - Apache
     X-Powered-By:
@@ -30,18 +30,18 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=90941faf7a32c7d231a80228d60844c9; path=/
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2291cba076881dc417c455e7381b98514a%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479220878%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De32ab64e6e09954caded06e976e62151;
-      expires=Tue, 15-Nov-2016 16:41:18 GMT; path=/
-    - csrf_xmen=898d3bf390e56aafccc4f50e91b90958; expires=Tue, 15-Nov-2016 16:41:18
+    - PHPSESSID=1a9fd798fc5fa1379f415690caa90c0a; path=/
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%222c5b6b080bd7dfb4aee04481465263ce%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377373%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D16ac9b7fbabe88b3dd77a632427bc210;
+      expires=Thu, 17-Nov-2016 12:09:33 GMT; path=/
+    - csrf_xmen=cf4dbb862a4c570d79b2fdad881c6b0d; expires=Thu, 17-Nov-2016 12:09:33
       GMT; path=/
     X-Server:
     - '3908'
-    Content-Length:
-    - '78114'
+    Transfer-Encoding:
+    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 15 Nov 2016 14:41:18 GMT
+recorded_at: Thu, 17 Nov 2016 10:09:33 GMT
