200 OK http://www.parliament.gh/parliamentarians/370

--- a/www.parliament.gh/c5fe3c1f4d86065f2d7f0e9b7d244565efc16810.yml
+++ b/www.parliament.gh/c5fe3c1f4d86065f2d7f0e9b7d244565efc16810.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 15 Nov 2016 15:05:16 GMT
+    - Thu, 17 Nov 2016 11:10:37 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%225052ec289b7bf4cc4e64623701867755%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479222316%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Da5df694e8f65f58c18f2319e117d7488;
-      expires=Tue, 15-Nov-2016 17:05:16 GMT; path=/
-    - csrf_xmen=ad84d7b6db3d1dc5134426bf18303f51; expires=Tue, 15-Nov-2016 17:05:16
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22146114e86286ae83c0749ee2ad729f6c%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381037%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dd61944a82132c15da47d3a65b3cffbb3;
+      expires=Thu, 17-Nov-2016 13:10:37 GMT; path=/
+    - csrf_xmen=e45db920360bd2c67db73e1c8c6886b2; expires=Thu, 17-Nov-2016 13:10:37
       GMT; path=/
     X-Server:
     - '3908'
-    Content-Length:
-    - '17184'
+    Transfer-Encoding:
+    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 15 Nov 2016 15:05:16 GMT
+recorded_at: Thu, 17 Nov 2016 11:10:37 GMT
