200 OK http://www.parliament.gh/parliamentarians/399

--- a/www.parliament.gh/9b7546448fd544915c42e54b02f16bfbea51baa5.yml
+++ b/www.parliament.gh/9b7546448fd544915c42e54b02f16bfbea51baa5.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 15 Nov 2016 15:23:16 GMT
+    - Thu, 17 Nov 2016 11:37:18 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22a5eeac91a8f6b75ca566541853291a7a%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479223396%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D7932945929e849a399be8afea08b123b;
-      expires=Tue, 15-Nov-2016 17:23:16 GMT; path=/
-    - csrf_xmen=ccc5653698550f3abb79d5b3cafb83d5; expires=Tue, 15-Nov-2016 17:23:16
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2238df102379ce81e48a3532079ad9527c%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382638%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D5f2dfe0260bc7efd550fcb086191abc0;
+      expires=Thu, 17-Nov-2016 13:37:18 GMT; path=/
+    - csrf_xmen=2a03f56f26fc14785f75f15b95c1672c; expires=Thu, 17-Nov-2016 13:37:18
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
+    Content-Length:
+    - '16260'
     Content-Type:
     - text/html; charset=iso-8859-1
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 15 Nov 2016 15:23:16 GMT
+recorded_at: Thu, 17 Nov 2016 11:37:18 GMT
