200 OK http://www.parliament.gh/parliamentarians/106

--- a/www.parliament.gh/d60f73bf048bf6902534c649a59db537e36c58d6.yml
+++ b/www.parliament.gh/d60f73bf048bf6902534c649a59db537e36c58d6.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:38:46 GMT
+    - Thu, 17 Nov 2016 11:41:09 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2237bd28459e74bd3a7c4dae4793f33378%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382726%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D9f207f6b0f78bb9c1cdcd58622cd7119;
-      expires=Thu, 17-Nov-2016 13:38:46 GMT; path=/
-    - csrf_xmen=7e500adb71cf87dad0c800a85bd94687; expires=Thu, 17-Nov-2016 13:38:46
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2275b877367401a3d261225948c93e30ae%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382869%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D052a69f6bbbc0b1e3ff0680eea899411;
+      expires=Thu, 17-Nov-2016 13:41:09 GMT; path=/
+    - csrf_xmen=33188f2df21dc45336435ee001b8249c; expires=Thu, 17-Nov-2016 13:41:09
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
+    Content-Length:
+    - '16551'
     Content-Type:
     - text/html; charset=iso-8859-1
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:38:46 GMT
+recorded_at: Thu, 17 Nov 2016 11:41:09 GMT
