200 OK http://www.parliament.gh/parliamentarians/

--- a/www.parliament.gh/2c4b48d0164a1db94f6a18b5b32871cf7b785f22.yml
+++ b/www.parliament.gh/2c4b48d0164a1db94f6a18b5b32871cf7b785f22.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 09:50:52 GMT
+    - Thu, 17 Nov 2016 16:07:04 GMT
     Server:
     - Apache
     X-Powered-By:
@@ -30,18 +30,18 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=e42a3156b64aa191cb3f0d6f3ab13d7a; path=/
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%226c4369a49517961401bbb5885fafdf85%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376252%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D356f98f4ad8ad6ea1969b6025663df1f;
-      expires=Thu, 17-Nov-2016 11:50:52 GMT; path=/
-    - csrf_xmen=c75faf02a996c1d34fa3aaa3be5d7450; expires=Thu, 17-Nov-2016 11:50:52
+    - PHPSESSID=c2c231cd701ef335b353af79bd1ce3c7; path=/
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%222b3055bb013a46e50c169e44dcbb5598%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479398824%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dcca562bf0ddfbea86f088d3ab28be785;
+      expires=Thu, 17-Nov-2016 18:07:04 GMT; path=/
+    - csrf_xmen=88e22dc556cd6b3441b96306f05e5000; expires=Thu, 17-Nov-2016 18:07:04
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '77843'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 09:50:53 GMT
+recorded_at: Thu, 17 Nov 2016 16:07:04 GMT
