--- a/www.parliament.gh/25b28e65a65a337dee35daf01f69c346b8f0d8e6.yml
+++ b/www.parliament.gh/25b28e65a65a337dee35daf01f69c346b8f0d8e6.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 09:51:21 GMT
+    - Thu, 17 Nov 2016 16:07:23 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%223498afa8c08dd25c3e52a6031ffc1381%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376281%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dac040b668b88b9351a4315ba76bca93f;
-      expires=Thu, 17-Nov-2016 11:51:21 GMT; path=/
-    - csrf_xmen=b937c5f5a8b1a1ea5ceed80e5551fd84; expires=Thu, 17-Nov-2016 11:51:21
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%228aa1c3fc3fcf0912e62270716f186454%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479398843%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D5fd29b994c72bca899ce58b8ab23681c;
+      expires=Thu, 17-Nov-2016 18:07:23 GMT; path=/
+    - csrf_xmen=f73393a4db42756ef497ba4079711176; expires=Thu, 17-Nov-2016 18:07:23
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16146'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 09:51:22 GMT
+recorded_at: Thu, 17 Nov 2016 16:07:24 GMT
