--- a/www.parliament.gh/13174337d6ce3c8cebeb2b1854f6590376ac268e.yml
+++ b/www.parliament.gh/13174337d6ce3c8cebeb2b1854f6590376ac268e.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 09:51:43 GMT
+    - Thu, 17 Nov 2016 16:07:49 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e374c07678e082f97639062297d093c2%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376303%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df8de66251e7b35d6cd642e1e5d700ec4;
-      expires=Thu, 17-Nov-2016 11:51:43 GMT; path=/
-    - csrf_xmen=097bf868d00d2a7f3b98b6179e3f54ba; expires=Thu, 17-Nov-2016 11:51:43
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22c4a4656ddcc1ab0b99a66b071837186b%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479398869%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Db1405914544cb6a699cde6a55c85e02b;
+      expires=Thu, 17-Nov-2016 18:07:49 GMT; path=/
+    - csrf_xmen=ba07455c23cc1c85f2d543175aec2532; expires=Thu, 17-Nov-2016 18:07:49
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16821'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 09:51:44 GMT
+recorded_at: Thu, 17 Nov 2016 16:07:50 GMT
