200 OK http://www.parliament.gh/parliamentarians/423

--- a/www.parliament.gh/fef5196b3338350fab2a02a05bb67a9a198e1ada.yml
+++ b/www.parliament.gh/fef5196b3338350fab2a02a05bb67a9a198e1ada.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 09:52:00 GMT
+    - Thu, 17 Nov 2016 16:08:13 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ffa5359bcbd987c0586f7c3c5307128f%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376320%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dbf086a070a5e3242f995619de63a730c;
-      expires=Thu, 17-Nov-2016 11:52:00 GMT; path=/
-    - csrf_xmen=8887df53dca9b9add35950b0ad228058; expires=Thu, 17-Nov-2016 11:52:00
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22dc525c4bd1b4713a98b2bef58b646a58%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479398893%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dd1a8ea660d755e18b978a9fe6374c900;
+      expires=Thu, 17-Nov-2016 18:08:13 GMT; path=/
+    - csrf_xmen=7492a665af3fdb180cf80be37d826d06; expires=Thu, 17-Nov-2016 18:08:13
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16769'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 09:52:01 GMT
+recorded_at: Thu, 17 Nov 2016 16:08:13 GMT
