--- a/www.parliament.gh/af316afdc7a01b4093400b29f668bbb81e386a4c.yml
+++ b/www.parliament.gh/af316afdc7a01b4093400b29f668bbb81e386a4c.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 09:52:16 GMT
+    - Thu, 17 Nov 2016 16:08:45 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e7d0d161b1a0a09f34cd7f59bea66421%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376336%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D458d6d39d006614517a1bfd63f49f548;
-      expires=Thu, 17-Nov-2016 11:52:16 GMT; path=/
-    - csrf_xmen=6acb4f0d54b90b1757e44ac2963d73a5; expires=Thu, 17-Nov-2016 11:52:16
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22083d34d32721fc18959c4ef2b8917dbf%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479398925%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D0341578a45d458a79ce5293b23d7e851;
+      expires=Thu, 17-Nov-2016 18:08:45 GMT; path=/
+    - csrf_xmen=ea98f61da841f4f113abf30a40878a96; expires=Thu, 17-Nov-2016 18:08:45
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16817'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 09:52:17 GMT
+recorded_at: Thu, 17 Nov 2016 16:08:45 GMT
