200 OK http://www.parliament.gh/parliamentarians/80

--- a/www.parliament.gh/033c7b41a3274062ee127312b00e2a177f5820a6.yml
+++ b/www.parliament.gh/033c7b41a3274062ee127312b00e2a177f5820a6.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 09:52:39 GMT
+    - Thu, 17 Nov 2016 16:09:03 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%223cb73598c0b928d2e3ac980c22c13840%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376359%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D6c7f3717847aed21f3848b17e7d1b4dc;
-      expires=Thu, 17-Nov-2016 11:52:39 GMT; path=/
-    - csrf_xmen=9ec6e2c1713c46966dab1e825cdc9708; expires=Thu, 17-Nov-2016 11:52:39
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%220db28b73bb518fef1f4a82f5f53ef626%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479398943%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2f507cb4a7c29032ca9822a029781a23;
+      expires=Thu, 17-Nov-2016 18:09:03 GMT; path=/
+    - csrf_xmen=d9772c4998f011affabac7c74b26cb05; expires=Thu, 17-Nov-2016 18:09:03
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '17027'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 17 Nov 2016 09:52:40 GMT
+recorded_at: Thu, 17 Nov 2016 16:09:03 GMT
