200 OK http://www.parliament.gh/parliamentarians/357

--- a/www.parliament.gh/00279f489525479dd323c8e9cf3733956c2da753.yml
+++ b/www.parliament.gh/00279f489525479dd323c8e9cf3733956c2da753.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 09:52:58 GMT
+    - Thu, 17 Nov 2016 16:09:16 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2264b2501f612f65c1bac5ca28c3934e62%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376378%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D48524e1e4fcb11a0f0cf9776558eb536;
-      expires=Thu, 17-Nov-2016 11:52:58 GMT; path=/
-    - csrf_xmen=5372891b0f8986cd0e6b07f978efbf78; expires=Thu, 17-Nov-2016 11:52:58
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22599a1b89b0146a5dae8efbe051c3faa8%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479398956%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dcd9faeeab00b1ab8130b05c45f056049;
+      expires=Thu, 17-Nov-2016 18:09:16 GMT; path=/
+    - csrf_xmen=1f7517b6a520af5ec2328ddce473fc66; expires=Thu, 17-Nov-2016 18:09:16
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16438'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 09:52:59 GMT
+recorded_at: Thu, 17 Nov 2016 16:09:16 GMT
