200 OK http://www.parliament.gh/parliamentarians/299

--- a/www.parliament.gh/5f61c55b5bcbb5863a1cedae7ef78258e7e6335d.yml
+++ b/www.parliament.gh/5f61c55b5bcbb5863a1cedae7ef78258e7e6335d.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 09:53:22 GMT
+    - Thu, 17 Nov 2016 16:09:47 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d60fa73efbcc88d67cacde4b6eead745%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376402%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D75cf7ea7909167923d6a59492a89136c;
-      expires=Thu, 17-Nov-2016 11:53:22 GMT; path=/
-    - csrf_xmen=8cb6c37135d3c2e257bc674e381ffc87; expires=Thu, 17-Nov-2016 11:53:22
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b9ec323d30119e7aa0b2b71ef6349a4c%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479398987%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D85e55517795a8c8f28d1a888fac6939d;
+      expires=Thu, 17-Nov-2016 18:09:47 GMT; path=/
+    - csrf_xmen=2b3d8ed76208abf07363aaba8cdb3685; expires=Thu, 17-Nov-2016 18:09:47
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16505'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 09:53:23 GMT
+recorded_at: Thu, 17 Nov 2016 16:09:48 GMT
