200 OK http://www.parliament.gh/parliamentarians/113

--- a/www.parliament.gh/ad9ca6061e3c28b36aa8f19b5963a8c1cd6b42dc.yml
+++ b/www.parliament.gh/ad9ca6061e3c28b36aa8f19b5963a8c1cd6b42dc.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 09:53:38 GMT
+    - Thu, 17 Nov 2016 16:10:10 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%223659c09490e81ac2da726d18ed5d0141%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376418%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D6f8bc053a26bbfa31d0d3bf50103273d;
-      expires=Thu, 17-Nov-2016 11:53:38 GMT; path=/
-    - csrf_xmen=56bdc0d36de86082d9a53bb3ec613d40; expires=Thu, 17-Nov-2016 11:53:38
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22dfbe57580c91828a004fded462c714e9%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399010%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D829f16b9ef430e66a582a97af17ff7cb;
+      expires=Thu, 17-Nov-2016 18:10:10 GMT; path=/
+    - csrf_xmen=8d16630f9d66904847a89efda0f58bff; expires=Thu, 17-Nov-2016 18:10:10
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16556'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 09:53:39 GMT
+recorded_at: Thu, 17 Nov 2016 16:10:11 GMT
