200 OK http://www.parliament.gh/parliamentarians/338

--- a/www.parliament.gh/d2be5d177ac905c22a2c0fe776bf7fa06e33f455.yml
+++ b/www.parliament.gh/d2be5d177ac905c22a2c0fe776bf7fa06e33f455.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 09:54:04 GMT
+    - Thu, 17 Nov 2016 16:10:30 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e52372dbe48ff3c3a0e745451fe3416f%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376444%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D844a570671e84fe9fcf43833eb418a7d;
-      expires=Thu, 17-Nov-2016 11:54:04 GMT; path=/
-    - csrf_xmen=bcff6d20e84c5481b99fc75fedc23211; expires=Thu, 17-Nov-2016 11:54:04
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2277ee2ed4080c1366fb9abbe8d4899bdb%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399030%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2bf06df800c6edf4ca70cb2a315434c8;
+      expires=Thu, 17-Nov-2016 18:10:30 GMT; path=/
+    - csrf_xmen=60e19b25d80abe91cffb525dbc5be1cf; expires=Thu, 17-Nov-2016 18:10:30
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16736'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 09:54:05 GMT
+recorded_at: Thu, 17 Nov 2016 16:10:30 GMT
