200 OK http://www.parliament.gh/parliamentarians/280

--- a/www.parliament.gh/279ccff17337668160510a2dbe8a5421481c7d3a.yml
+++ b/www.parliament.gh/279ccff17337668160510a2dbe8a5421481c7d3a.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 09:54:27 GMT
+    - Thu, 17 Nov 2016 16:11:06 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d763914325182a6f68e2e33c54bfb927%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376467%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2e99f34b4ee8a3a99c23d2986924c04f;
-      expires=Thu, 17-Nov-2016 11:54:27 GMT; path=/
-    - csrf_xmen=44465509471ce1a73d3527827406b4ce; expires=Thu, 17-Nov-2016 11:54:27
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22dc1c138f734c8ecbc04f0778f1bfdd87%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399066%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D6e41055422212ecfd6c76064bfc67915;
+      expires=Thu, 17-Nov-2016 18:11:06 GMT; path=/
+    - csrf_xmen=f303853f81c55b8138d231a035c347ca; expires=Thu, 17-Nov-2016 18:11:06
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16514'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 09:54:28 GMT
+recorded_at: Thu, 17 Nov 2016 16:11:06 GMT
