200 OK http://www.parliament.gh/parliamentarians/82

--- a/www.parliament.gh/ef1885ea94867445320bb957c8d874aa4d423d6d.yml
+++ b/www.parliament.gh/ef1885ea94867445320bb957c8d874aa4d423d6d.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 09:54:44 GMT
+    - Thu, 17 Nov 2016 16:11:40 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2234c24208d9b7b85ee41f0f65ff558e39%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376484%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dd97f74540e4d112627f51379858cb403;
-      expires=Thu, 17-Nov-2016 11:54:44 GMT; path=/
-    - csrf_xmen=a4655df964ce234e3c40389460b52f86; expires=Thu, 17-Nov-2016 11:54:44
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22001047dfea10ec9c9d2b0278e4b9cca5%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399100%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De2ff3332fe499fed36cf757e4312b69b;
+      expires=Thu, 17-Nov-2016 18:11:40 GMT; path=/
+    - csrf_xmen=3500d2f1349bbb9b3a525aa6eee62426; expires=Thu, 17-Nov-2016 18:11:40
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16493'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 09:54:45 GMT
+recorded_at: Thu, 17 Nov 2016 16:11:40 GMT
