200 OK http://www.parliament.gh/parliamentarians/34

--- a/www.parliament.gh/18db07a32f8a14cf94dd0fa4786466b7acc95ca7.yml
+++ b/www.parliament.gh/18db07a32f8a14cf94dd0fa4786466b7acc95ca7.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 09:55:11 GMT
+    - Thu, 17 Nov 2016 16:12:19 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%228da1510725ad782948fe298ea9c7a601%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376512%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D4750f32dfaa825bed3c8d882bf024584;
-      expires=Thu, 17-Nov-2016 11:55:12 GMT; path=/
-    - csrf_xmen=5a4b10d6509dd0184a077307d26fd320; expires=Thu, 17-Nov-2016 11:55:12
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%226273e2a638b6dfdb73330c67c548babf%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399139%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D948a6f2cd957d8a62aaa4a2bf3a0021f;
+      expires=Thu, 17-Nov-2016 18:12:19 GMT; path=/
+    - csrf_xmen=28ff3ba49133ebc0e22eb6bd35c29045; expires=Thu, 17-Nov-2016 18:12:19
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '15938'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 09:55:13 GMT
+recorded_at: Thu, 17 Nov 2016 16:12:19 GMT
