200 OK http://www.parliament.gh/parliamentarians/225

--- a/www.parliament.gh/f12d1116144d31d1d8580aa3056362ce2fb8c462.yml
+++ b/www.parliament.gh/f12d1116144d31d1d8580aa3056362ce2fb8c462.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 09:55:29 GMT
+    - Thu, 17 Nov 2016 16:12:33 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%228a62790cb7fc69e4e4a0f5de438421a9%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376529%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dcf21dc7bec6ca211b73be965876a7ba9;
-      expires=Thu, 17-Nov-2016 11:55:29 GMT; path=/
-    - csrf_xmen=51851e3f3790a60b148e068aface55c5; expires=Thu, 17-Nov-2016 11:55:29
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%222cf51a784535fb30afc272c7b362bf84%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399153%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D3864a00a4a5cef1355109f5f6323b57a;
+      expires=Thu, 17-Nov-2016 18:12:33 GMT; path=/
+    - csrf_xmen=f03431960e4202877d48c10ae50aa95a; expires=Thu, 17-Nov-2016 18:12:33
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16553'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 09:55:30 GMT
+recorded_at: Thu, 17 Nov 2016 16:12:33 GMT
