200 OK http://www.parliament.gh/parliamentarians/348

--- a/www.parliament.gh/00213ba43893d6ecf8aa9ab4ffa360f3a8fd8e4f.yml
+++ b/www.parliament.gh/00213ba43893d6ecf8aa9ab4ffa360f3a8fd8e4f.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 09:55:45 GMT
+    - Thu, 17 Nov 2016 16:13:06 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%223cf92051689eb2c290e9bb6181bb3f55%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376545%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2f5b588be1ce6513eb349024f682f56b;
-      expires=Thu, 17-Nov-2016 11:55:45 GMT; path=/
-    - csrf_xmen=8de6f148572b3efa99bd7a0ec72d0497; expires=Thu, 17-Nov-2016 11:55:45
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ade2de5ecdb733cbe416c3aef375178a%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399186%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D040f9305d91e188031179b5870495dda;
+      expires=Thu, 17-Nov-2016 18:13:06 GMT; path=/
+    - csrf_xmen=4855ecb629a0a02d0a36ae0a06102773; expires=Thu, 17-Nov-2016 18:13:06
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '17197'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 09:55:46 GMT
+recorded_at: Thu, 17 Nov 2016 16:13:06 GMT
