200 OK http://www.parliament.gh/parliamentarians/323

--- a/www.parliament.gh/9b1d017e952678cda747d1c6fbdd1b300f74a479.yml
+++ b/www.parliament.gh/9b1d017e952678cda747d1c6fbdd1b300f74a479.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 09:56:07 GMT
+    - Thu, 17 Nov 2016 16:13:35 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%221ecf8436ad0e68d7450126726f356e47%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376567%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D7fb885e83c486df545d43aa7ba4d6be6;
-      expires=Thu, 17-Nov-2016 11:56:07 GMT; path=/
-    - csrf_xmen=dac3b09b39851a46df7374dbd1f7f9b0; expires=Thu, 17-Nov-2016 11:56:07
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22cfb0be0e7670eaeeabf836f0686c708c%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399216%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De57154a3c9778bb2ded3fa6662292246;
+      expires=Thu, 17-Nov-2016 18:13:36 GMT; path=/
+    - csrf_xmen=85e53cf786c93ba7ae69d8a28a079fb4; expires=Thu, 17-Nov-2016 18:13:36
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16497'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 09:56:08 GMT
+recorded_at: Thu, 17 Nov 2016 16:13:36 GMT
