--- a/www.parliament.gh/174a2d3175f5ff742c8d917e6671613d77101a00.yml
+++ b/www.parliament.gh/174a2d3175f5ff742c8d917e6671613d77101a00.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 09:56:21 GMT
+    - Thu, 17 Nov 2016 16:14:02 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e77a52046da801f6c1155962d0d0a1ca%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376582%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Daae098d602571c53374fd8d22b1e37ad;
-      expires=Thu, 17-Nov-2016 11:56:22 GMT; path=/
-    - csrf_xmen=94db180f6eac95a866e4f1043c96ea6e; expires=Thu, 17-Nov-2016 11:56:22
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%222e0b6e50ba83dfd4a4054b9500960371%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399242%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dbf0471986a486ddc3ae5aae45a3ebc9e;
+      expires=Thu, 17-Nov-2016 18:14:02 GMT; path=/
+    - csrf_xmen=d5a49920e6c8b0730b34dbb2ef037c79; expires=Thu, 17-Nov-2016 18:14:02
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16592'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 09:56:23 GMT
+recorded_at: Thu, 17 Nov 2016 16:14:02 GMT
