200 OK http://www.parliament.gh/parliamentarians/85

--- a/www.parliament.gh/5913ca6750913ee8e0d8356373cb5b0c733fd685.yml
+++ b/www.parliament.gh/5913ca6750913ee8e0d8356373cb5b0c733fd685.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 09:56:37 GMT
+    - Thu, 17 Nov 2016 16:14:34 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22506962e2b10628b6f650b873a25246e2%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376597%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D08e7b6c59db3f69b16d72f6466049f2b;
-      expires=Thu, 17-Nov-2016 11:56:37 GMT; path=/
-    - csrf_xmen=c6681bc385547573f7756b74f77c3c9a; expires=Thu, 17-Nov-2016 11:56:37
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%223cad8129a976d7351d4e027cbc800851%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399275%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D51689f777925a2082c83beaa82856381;
+      expires=Thu, 17-Nov-2016 18:14:35 GMT; path=/
+    - csrf_xmen=8e6df7c78f09815ee4ff373d288da162; expires=Thu, 17-Nov-2016 18:14:35
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16604'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 09:56:38 GMT
+recorded_at: Thu, 17 Nov 2016 16:14:35 GMT
