--- a/www.parliament.gh/1f8886de2679c8843ccdcf8cdc3639dcbb77f200.yml
+++ b/www.parliament.gh/1f8886de2679c8843ccdcf8cdc3639dcbb77f200.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 09:57:03 GMT
+    - Thu, 17 Nov 2016 16:15:00 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22f74a673d3b832e322e8160db99e87675%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376623%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dd8cf2ed5c03ab5d93162e4165199e4d8;
-      expires=Thu, 17-Nov-2016 11:57:03 GMT; path=/
-    - csrf_xmen=7a82679f5b146635d098c7185636c167; expires=Thu, 17-Nov-2016 11:57:03
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%229c7632c27e829f15da37773526dea628%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399301%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De8eefc7bfd3a4b773ecbcde77b0cd0ca;
+      expires=Thu, 17-Nov-2016 18:15:01 GMT; path=/
+    - csrf_xmen=7bfe1e915e3c1fb8724a7d6bee544be5; expires=Thu, 17-Nov-2016 18:15:01
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16648'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 09:57:04 GMT
+recorded_at: Thu, 17 Nov 2016 16:15:01 GMT
