200 OK http://www.parliament.gh/parliamentarians/46

--- a/www.parliament.gh/d78daea195c10fa35923f894aabd5ae73b9df117.yml
+++ b/www.parliament.gh/d78daea195c10fa35923f894aabd5ae73b9df117.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 09:57:28 GMT
+    - Thu, 17 Nov 2016 16:15:29 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2291391d5de44ae998ac04b14dd097fc64%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376648%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D4330849caf1d482b8c90c4e00bac2316;
-      expires=Thu, 17-Nov-2016 11:57:28 GMT; path=/
-    - csrf_xmen=3a6c66df1359731812585914cddef351; expires=Thu, 17-Nov-2016 11:57:28
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22a371142e7ceb919d483f514136d059d5%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399329%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D54adcd6e72c700232bb8b43033f21f83;
+      expires=Thu, 17-Nov-2016 18:15:29 GMT; path=/
+    - csrf_xmen=cd25dcf1ddfad0de399d0e8cb837b1bd; expires=Thu, 17-Nov-2016 18:15:29
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16835'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 09:57:29 GMT
+recorded_at: Thu, 17 Nov 2016 16:15:29 GMT
