--- a/www.parliament.gh/d622bb06ec1ba6cc4d736bb2189438be18602f95.yml
+++ b/www.parliament.gh/d622bb06ec1ba6cc4d736bb2189438be18602f95.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 09:57:46 GMT
+    - Thu, 17 Nov 2016 16:15:57 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2287d3c9fcac4acd701f4f570dee629a7f%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376666%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D92751444d65c10731efd31576d0f7a14;
-      expires=Thu, 17-Nov-2016 11:57:46 GMT; path=/
-    - csrf_xmen=6ee517c8de0c85220ccd82e492dfd16c; expires=Thu, 17-Nov-2016 11:57:46
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%228ad3556a8c6b63ed065ac6181fdbd984%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399357%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D6c8c6777665e975dc88ad9dd9d0a8ef3;
+      expires=Thu, 17-Nov-2016 18:15:57 GMT; path=/
+    - csrf_xmen=dd319ec5bf7f52d000b5f647e4a1f1ef; expires=Thu, 17-Nov-2016 18:15:57
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16303'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 09:57:47 GMT
+recorded_at: Thu, 17 Nov 2016 16:15:58 GMT
