200 OK http://www.parliament.gh/parliamentarians/330

--- a/www.parliament.gh/88742164cebf31cff5fdea792dac49577920718d.yml
+++ b/www.parliament.gh/88742164cebf31cff5fdea792dac49577920718d.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:00:24 GMT
+    - Thu, 17 Nov 2016 16:16:17 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b649ced0db3e07fbe12b65135e92d725%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376824%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2fc72f16602c158e13b8f97f7a6fbf72;
-      expires=Thu, 17-Nov-2016 12:00:24 GMT; path=/
-    - csrf_xmen=983e21efc66d4145ae2c8ad446dd0d58; expires=Thu, 17-Nov-2016 12:00:24
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%223865ec097a53daabba65e823b0635de8%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399377%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D4dd3f6a38bd852a2133ae8df053702fb;
+      expires=Thu, 17-Nov-2016 18:16:17 GMT; path=/
+    - csrf_xmen=2b9548e500c499825aece7aec4e6af9c; expires=Thu, 17-Nov-2016 18:16:17
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16699'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:00:25 GMT
+recorded_at: Thu, 17 Nov 2016 16:16:17 GMT
