200 OK http://www.parliament.gh/parliamentarians/355

--- a/www.parliament.gh/9c3f51d913baddc3842c5b4b916bfe25ca116870.yml
+++ b/www.parliament.gh/9c3f51d913baddc3842c5b4b916bfe25ca116870.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:00:49 GMT
+    - Thu, 17 Nov 2016 16:16:32 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22dfd46b04216b42093c4e8c93e18fe175%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376850%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D7d07c83bef16387371aff07c096f797c;
-      expires=Thu, 17-Nov-2016 12:00:50 GMT; path=/
-    - csrf_xmen=5fb129b427481a26bfd3aef82cd8ff37; expires=Thu, 17-Nov-2016 12:00:49
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22a8fc36855257a3a537b5b032def4d06f%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399392%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Db176c300a9d661e1fb8366d57a5a7938;
+      expires=Thu, 17-Nov-2016 18:16:32 GMT; path=/
+    - csrf_xmen=5b42c2e576f75b30d59b29edeec58ad6; expires=Thu, 17-Nov-2016 18:16:32
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16635'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:00:51 GMT
+recorded_at: Thu, 17 Nov 2016 16:16:32 GMT
