200 OK http://www.parliament.gh/parliamentarians/353

--- a/www.parliament.gh/10607b7e0a6f368eaf13126b2ef570b0c9cc1da6.yml
+++ b/www.parliament.gh/10607b7e0a6f368eaf13126b2ef570b0c9cc1da6.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:01:10 GMT
+    - Thu, 17 Nov 2016 16:16:45 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22c9fe68e590088a426d0ab0ec56e21312%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376870%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D7230fd00bb837dd151a55185ced8d55f;
-      expires=Thu, 17-Nov-2016 12:01:10 GMT; path=/
-    - csrf_xmen=6072327516ad5d121f7833fdce2d1bc9; expires=Thu, 17-Nov-2016 12:01:10
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ab9edfcd72c06a0c810916b32c846d6b%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399406%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dac3bec2e8a37d8a4f2dcfdb00f507144;
+      expires=Thu, 17-Nov-2016 18:16:46 GMT; path=/
+    - csrf_xmen=04e464a1f2f5f4247aa941ae4ede3bba; expires=Thu, 17-Nov-2016 18:16:45
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16447'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:01:11 GMT
+recorded_at: Thu, 17 Nov 2016 16:16:46 GMT
