200 OK http://www.parliament.gh/parliamentarians/341

--- a/www.parliament.gh/526fe820651752c4c0d74bc54a40c0af5fa0ac76.yml
+++ b/www.parliament.gh/526fe820651752c4c0d74bc54a40c0af5fa0ac76.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:01:28 GMT
+    - Thu, 17 Nov 2016 16:17:12 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ce893ca5bbc7792d2be16957339dab05%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376888%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Daf81b3b03aa797c6b27a8ed99d2690d4;
-      expires=Thu, 17-Nov-2016 12:01:28 GMT; path=/
-    - csrf_xmen=4e46d12295e5b0c3fab03f43a8fbe081; expires=Thu, 17-Nov-2016 12:01:28
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22eafb7a3ca3e5e693f91e4a28454a2b47%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399432%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df554bc2f9b260296cada4330116acc37;
+      expires=Thu, 17-Nov-2016 18:17:12 GMT; path=/
+    - csrf_xmen=faa7856dd0e8074c161a1acc44d28427; expires=Thu, 17-Nov-2016 18:17:12
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16468'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:01:29 GMT
+recorded_at: Thu, 17 Nov 2016 16:17:12 GMT
