--- a/www.parliament.gh/d987a039f3c7a34119c4c5a9b7f6278e18d4bb1c.yml
+++ b/www.parliament.gh/d987a039f3c7a34119c4c5a9b7f6278e18d4bb1c.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:01:55 GMT
+    - Thu, 17 Nov 2016 16:17:27 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e8daa1bdd795366761f73288889b71a7%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376915%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dd84824f6f6022943ba72a5493deeb34a;
-      expires=Thu, 17-Nov-2016 12:01:55 GMT; path=/
-    - csrf_xmen=5e40a2d2f82ff943bbee30dbb896b71c; expires=Thu, 17-Nov-2016 12:01:55
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e0c7558b4edc07f8afadb5b734262bb0%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399447%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D67bfefcef5e3b2309b8a89f1087fe784;
+      expires=Thu, 17-Nov-2016 18:17:27 GMT; path=/
+    - csrf_xmen=f7cb6529f985f1be5b85fe3df974bd2a; expires=Thu, 17-Nov-2016 18:17:27
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16688'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:01:55 GMT
+recorded_at: Thu, 17 Nov 2016 16:17:27 GMT
