--- a/www.parliament.gh/6b427a5820b20be78ad49dcfa31fb0c6fc53fd5c.yml
+++ b/www.parliament.gh/6b427a5820b20be78ad49dcfa31fb0c6fc53fd5c.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:02:19 GMT
+    - Thu, 17 Nov 2016 16:17:43 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22c1c229677dfe50df5deee31768f01782%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376939%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D0f1ff02acd99e6eb552e86566b24c4f6;
-      expires=Thu, 17-Nov-2016 12:02:19 GMT; path=/
-    - csrf_xmen=6adc2a8b903c43af8988b54eafb6f02e; expires=Thu, 17-Nov-2016 12:02:19
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ae46eb3302eebb19d4e66b67ab439d9d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399463%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Da74b9f6cc7ee4cc2b5f7d77af9f951a6;
+      expires=Thu, 17-Nov-2016 18:17:43 GMT; path=/
+    - csrf_xmen=7f3bc71d4ad04e662f759c9cdc416b55; expires=Thu, 17-Nov-2016 18:17:43
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16570'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:02:19 GMT
+recorded_at: Thu, 17 Nov 2016 16:17:43 GMT
