200 OK http://www.parliament.gh/parliamentarians/page/20

--- a/www.parliament.gh/2f91b64e39a86cb31212b8dc86a35e8d5fe572bc.yml
+++ b/www.parliament.gh/2f91b64e39a86cb31212b8dc86a35e8d5fe572bc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 09:59:56 GMT
+    - Thu, 17 Nov 2016 16:18:09 GMT
     Server:
     - Apache
     X-Powered-By:
@@ -30,18 +30,18 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=be640de04e584c73a3156f71929002eb; path=/
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22251209f41bc122ee6d28685dcb0dacd3%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376796%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D0afbe29f103c68b8dc4cdcfeea4cd532;
-      expires=Thu, 17-Nov-2016 11:59:56 GMT; path=/
-    - csrf_xmen=a893efa4ecb20587734ae3cf870d7041; expires=Thu, 17-Nov-2016 11:59:56
+    - PHPSESSID=a5a1dea7e805229c97f3c97bb407d4b9; path=/
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2245e0e88a4c46e47f29e01c78322856e3%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399489%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dd591b527068db60c091d297ee053d45d;
+      expires=Thu, 17-Nov-2016 18:18:09 GMT; path=/
+    - csrf_xmen=30a5b1bea7365e4196f972b8cd652cae; expires=Thu, 17-Nov-2016 18:18:09
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '77999'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 09:59:57 GMT
+recorded_at: Thu, 17 Nov 2016 16:18:10 GMT
