--- a/www.parliament.gh/e2720e3fe0b359cbd2e60517309aa06a9fea7eb6.yml
+++ b/www.parliament.gh/e2720e3fe0b359cbd2e60517309aa06a9fea7eb6.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:02:44 GMT
+    - Thu, 17 Nov 2016 16:20:57 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22127dac46a66cee09da1646133776719f%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376964%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Db557293630c0a381325bb01606f887bc;
-      expires=Thu, 17-Nov-2016 12:02:44 GMT; path=/
-    - csrf_xmen=4da2bbc9bc8c3a0ab17dc025038d36b1; expires=Thu, 17-Nov-2016 12:02:44
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2278fab9d37d8631fbfdd49e9c1fdf4907%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399657%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Db20bfcafd072d0acacdf6f59146f433b;
+      expires=Thu, 17-Nov-2016 18:20:57 GMT; path=/
+    - csrf_xmen=9bcf60029215da5f6a18e381d20257d0; expires=Thu, 17-Nov-2016 18:20:57
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16510'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:02:44 GMT
+recorded_at: Thu, 17 Nov 2016 16:20:57 GMT
